--- a/두-원의-교점-지나는-직선/index.html
+++ b/두-원의-교점-지나는-직선/index.html
@@ -4,6 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>두 원의 교점을 지나는 직선</title>
+		<link rel="stylesheet" href="../color-text.css" />
+		<style></style>
 	</head>
 	<body>
 		<canvas></canvas>
