두 원의 교점을 지나는 직선

--- a/두-원의-교점-지나는-직선/index.html
+++ b/두-원의-교점-지나는-직선/index.html
@@ -8,8 +8,22 @@
 		<style></style>
 	</head>
 	<body>
-		<canvas></canvas>
+		<canvas width="500" height="500"></canvas>
+		<div>
+			<label for="r1"><b class="red">원1 반지름 </b></label>
+			<input type="number" id="r1" data-target="0r" />
+			<br />
+			<label for="r2"><b class="blue">원2 반지름</b></label>
+			<input type="number" id="r2" data-target="1r" />
+			<br />
+			<label for="C2x"><b class="blue">원2 X좌표</b></label>
+			<input type="number" id="C2x" data-target="1x" />
+			<br />
+			<label for="C2y"><b class="blue">원2 Y좌표</b></label>
+			<input type="number" id="C2y" data-target="1y" />
+			<br />
+		</div>
 
-		<script src="index.js"></script>
+		<script src="index.js" type="module"></script>
 	</body>
 </html>
