--- a/원의-접선/index.html
+++ b/원의-접선/index.html
@@ -34,6 +34,6 @@
 			<input type="number" id="Py" min="-250" max="250" value="40" />
 		</div>
 
-		<script src="index.js"></script>
+		<script src="index.js" type="module"></script>
 	</body>
 </html>
