--- a/직선의-교점/index.html
+++ b/직선의-교점/index.html
@@ -36,6 +36,6 @@
 			<input type="number" data-target="1b" />
 		</div>
 
-		<script src="index.js"></script>
+		<script src="index.js" type="module"></script>
 	</body>
 </html>
