--- a/직선과-이차함수-거리/index.html
+++ b/직선과-이차함수-거리/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>직선과 이차함수 그래프 거리</title>
+		<link rel="stylesheet" href="../color-text.css" />
 	</head>
 	<body>
 		<canvas width="500" height="500"></canvas>
