거리를 선분으로 나타내기

--- a/직선과-이차함수-거리/index.html
+++ b/직선과-이차함수-거리/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<canvas width="500" height="500"></canvas>
-		<div class="dist"></div>
+		<div class="dist green"></div>
 
 		<script src="index.js" type="module"></script>
 	</body>
