--- a/직선과-이차함수-거리/index.html
+++ b/직선과-이차함수-거리/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<canvas width="500" height="500"></canvas>
 		<div class="dist green"></div>
+		<!-- TODO: 이차함수 및 직선을 변경할 수 있게 입력하는 곳 만들기 -->
 
 		<script src="index.js" type="module"></script>
 	</body>
