--- a/유형반복R-903번/index.html
+++ b/유형반복R-903번/index.html
@@ -6,7 +6,7 @@
 		<title>903번</title>
 	</head>
 	<body>
-		유형반복R 공통수학2 903번 y = h(x) 그래프
+		<p>유형반복R 공통수학2 903번 y = h(x) 그래프</p>
 		<canvas width="500" height="500"></canvas>
 
 		<script src="index.js" type="module"></script>
